// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats coordinate in latlon-dd format 1`] = `
<div
  className="wv-coords-map wv-coords-map-btn"
  onClick={[Function]}
>
  <span
    className="map-coord"
  >
    0.0000°, 0.0000°
     
    EPSG:4326
  </span>
  <div
    className="coord-btn"
  >
    <i
      className="coord-switch"
    />
  </div>
</div>
`;

exports[`formats coordinate in latlon-dm format 1`] = `
<div
  className="wv-coords-map wv-coords-map-btn"
  onClick={[Function]}
>
  <span
    className="map-coord"
  >
     0°00.000'N,   0°00.000'E
     
    EPSG:4326
  </span>
  <div
    className="coord-btn"
  >
    <i
      className="coord-switch"
    />
  </div>
</div>
`;

exports[`formats coordinate in latlon-dms format 1`] = `
<div
  className="wv-coords-map wv-coords-map-btn"
  onClick={[Function]}
>
  <span
    className="map-coord"
  >
     0°00'00"N,   0°00'00"E
     
    EPSG:4326
  </span>
  <div
    className="coord-btn"
  >
    <i
      className="coord-switch"
    />
  </div>
</div>
`;
